--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,9 +3,9 @@ steps:
       - "echo '--- Install dependencies'"
       - "pip install -e .[test]"
       - "echo '+++ Lint'"
-      - "flake8 syditest"
+      - "flake8 matrix-is-tester"
       - "echo '+++ isort'"
-      - "isort -rc -c -vb syditest"
+      - "isort -rc -c -vb matrix-is-tester"
     label: "Lint"
     timeout_in_minutes: 5
     plugins:
