--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,6 +6,8 @@ steps:
       - "flake8 matrix_is_tester"
       - "echo '+++ isort'"
       - "isort -rc -c -vb matrix_is_tester"
+      - "echo '+++ black'"
+      - "python -m black --check --diff ."
     label: "Lint"
     timeout_in_minutes: 5
     plugins:
