--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - command:
       - "echo '--- Install dependencies'"
-      - "pip install -e .[test]"
+      - "pip install -e .[lint]"
       - "echo '+++ Lint'"
       - "flake8 matrix_is_tester"
       - "echo '+++ isort'"
