--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,15 @@
 [flake8]
 max-line-length = 90
+
+[isort]
+line_length = 88
+not_skip = __init__.py
+sections=FUTURE,STDLIB,COMPAT,THIRDPARTY,TWISTED,FIRSTPARTY,TESTS,LOCALFOLDER
+default_section=THIRDPARTY
+known_first_party = sydent
+known_tests=tests
+known_compat = mock,six
+known_twisted=twisted,OpenSSL
+multi_line_output=3
+include_trailing_comma=true
+combine_as_imports=true
